About Page Updated

--- a/about.html
+++ b/about.html
@@ -4,51 +4,67 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alumnies | SLIET ALUMNI</title>
+    <title>About | SLIET ALUMNI</title>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/resources/css/style.css" />
   </head>
   <body>
+    <div class="mobile-nav">
+      <div class="mobile-nav__close-button">X</div>
+      <div class="mobile-nav__menu">
+        <a href="#" class="mobile-nav__menu__link">Home</a>
+        <a href="alumni.html" class="mobile-nav__menu__link">Alumni</a>
+        <a href="#" class="mobile-nav__menu__link">About</a>
+        <a href="#" class="mobile-nav__menu__link">Gallery</a>
+        <a href="#" class="mobile-nav__menu__link">Contact</a>
+      </div>
+      <div class="mobile-nav__cta">
+        <a href="#" class="mobile-nav__cta__link">Login / Register</a>
+      </div>
+    </div>
+    <nav class="nav">
+      <a href="#" class="nav__logo">
+        <img src="resources/img/sliet-logo.png" alt="sliet-logo" />
+        SLIET Alumni
+      </a>
+      <div class="nav__menu">
+        <a href="#" class="nav__menu__link">Home</a>
+        <a href="alumni.html" class="nav__menu__link">Alumni</a>
+
+        <a href="about.html" class="nav__menu__link">About</a>
+        <a href="#" class="nav__menu__link">Gallery</a>
+        <a href="#" class="nav__menu__link">Contact</a>
+      </div>
+      <div class="nav__cta">
+        <a href="#" class="nav__cta__link">Login/Register</a>
+      </div>
+      <div class="nav__mobile-nav__icon"></div>
+    </nav>
     <!-- Body Container -->
     <div class="about__body-container">
-      <div class="mobile-nav">
-        <div class="mobile-nav__close-button">X</div>
-        <div class="mobile-nav__menu">
-          <a href="#" class="mobile-nav__menu__link">Home</a>
-          <a href="alumni.html" class="mobile-nav__menu__link">Alumni</a>
-          <a href="#" class="mobile-nav__menu__link">About</a>
-          <a href="#" class="mobile-nav__menu__link">Gallery</a>
-          <a href="#" class="mobile-nav__menu__link">Contact</a>
-        </div>
-        <div class="mobile-nav__cta">
-          <a href="#" class="mobile-nav__cta__link">Login / Register</a>
-        </div>
-      </div>
-      <nav class="nav">
-        <a href="#" class="nav__logo">
-          <img src="resources/img/sliet-logo.png" alt="sliet-logo" />
-          SLIET Alumni
-        </a>
-        <div class="nav__menu">
-          <a href="#" class="nav__menu__link">Home</a>
-          <a href="alumni.html" class="nav__menu__link">Alumni</a>
-
-          <a href="about.html" class="nav__menu__link">About</a>
-          <a href="#" class="nav__menu__link">Gallery</a>
-          <a href="#" class="nav__menu__link">Contact</a>
-        </div>
-        <div class="nav__cta">
-          <a href="#" class="nav__cta__link">Login/Register</a>
-        </div>
-        <div class="nav__mobile-nav__icon"></div>
-      </nav>
       <!-- Main Part Here -->
-      <header class="about__header"></header>
-      <!-- Footer Part -->
-      <footer class="footer">
-        © 2021 <a href="http://www.sliet.ac.in/" class="footer__website">SLIET Website</a>
-      </footer>
+
+      <header class="about__header">
+        <h1 class="about__header__heading">Sliet Alumni</h1>
+        <div class="about__header__heading heading-3">" Together, we can make a difference "</div>
+      </header>
+      <main class="about__main">
+        <section class="about__paragraph">
+          <p>We are Alumnies of Sant Longowal Institute of Engineering and Technology</p>
+          <p>
+            We focus on faculty, as opposed to facilities, budgets, endowments or students. We do so
+            because We believe, based on many decades of work as a teacher, a scholar and an
+            administrator, that the quality of the faculty determines the quality of the university.
+            Everything else flows from the quality of the faculty. If the faculty are good, you will
+            attract good students and you will have alumni who will raise funds for you.
+          </p>
+        </section>
+      </main>
     </div>
+    <!-- Footer Part -->
+    <footer class="footer">
+      © 2021 <a href="http://www.sliet.ac.in/" class="footer__website">SLIET Website</a>
+    </footer>
     <!-- script -->
     <script src="resources/js/script.js"></script>
   </body>
